--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,6 @@
   },
   "python.defaultInterpreterPath": "./venv/bin/python",
   "python.analysis.typeCheckingMode": "basic",
-  "cSpell.enabled": true,
+  "cSpell.enabled": false,
   "python.formatting.provider": "none"
 }
